# darts-demo

./: .gitignore  Dockerfile  MODELS.md  README.md  SPEC.md  dev.sh  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: datasets.py  models.py  upload.py  visualization.py  ws.py
backend/app/models/: enums.py  schemas.py
backend/app/services/: aggregator.py  column_classifier.py  csv_parser.py  dimension_parser.py  downsampler.py  kpi_computer.py  session_manager.py
backend/app/services/darts/: compatibility.py  registry.py  runner.py
backend/app/storage/: parquet_store.py  result_cache.py
backend/app/utils/: cleanup.py  progress.py
backend/data/parsed/f11733380d56/: metadata.json
backend/data/results/0b7aa8638e3f/: 32921a0da6bb.json  45f02bc77073.json  4f7da2dfb493.json  6b7ee4ab40b5.json  7d0e3e37f76a.json  8110a69c2a26.json  9f0e4ec4ba2d.json  b16d538aa15b.json  b5591770b063.json  d1761784db0b.json  d4f71dbe8100.json
backend/data/results/60d2127bc334/: 100d963e3b29.json  136aa8355c19.json  1699e081b933.json  250696bf663d.json  2dfa6b082485.json  2e80c3cb1553.json  3751f2c9f146.json  3f7024df9899.json  42b3de5a79ca.json  454df805c6c4.json  48d4dc35558c.json  546e2b6843ab.json  5833d75a34b0.json  59e10f14480e.json  5d392810e76f.json  6132ec7d8248.json  6606c43ef1ac.json  6c8c11f57849.json  752cc4987f4b.json  78b5b6ca84ea.json  a23ea8a398c5.json  aa62b8ac628d.json  adeebabf05fb.json  d046b8cd06b3.json  d9d8a5550076.json  f1c685e18742.json  f87d4f136707.json  fa4087468e81.json
frontend/: index.html  (+5 more)
(+53 files in other folders)
