[project]
name = "darts-anomaly-demo"
version = "0.1.0"
description = "Time series anomaly detection using Darts library"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=18.0",
    "numpy>=1.26",
    "aiofiles>=24.0",
    "websockets>=13.0",
    "apscheduler>=3.10",
    "darts>=0.41",
    "pyod>=2.0",
    "statsforecast>=2.0",
    "ruptures>=1.1",
    "prophet>=1.1",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]
peer = [
    "dtaidistance>=2.3",
    "stumpy>=1.12",
]
torch = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "huggingface-hub>=0.35.3",
    "safetensors>=0.6.2",
    "granite-tsfm>=0.2",
    # momentfm and lag-llama are soft dependencies (installed manually for native GPU runs)
    # due to huggingface-hub / numpy version conflicts with darts
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
